# raspi3-robot-api

./: README.md  app.py  pyproject.toml  run.py
app/: __init__.py
app/templates/: index2.html
hardware/: __init__.py  camera.py  whells.py
raspi/api/: run.py
raspi/api/app/: __init__.py
raspi/api/app/templates/: index1.html
raspi/api/hardware/: __init__.py
