[tool.poetry]
name = "robotic-raspi3-api"
version = "0.1.0"
description = ""
authors = ["Fatih Sarhan <f9n@protonmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.4"
flask = "^1.0"
"RPi.GPIO" = "^0.6.4"
picamera = "^1.13"
gpiozero = "^1.4"

[tool.poetry.dev-dependencies]
pylint = "^2.1"
black = { version = "^18.9b0", python = "^3.6" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
